--- a/l2U27E.md
+++ b/l2U27E.md
@@ -1,76 +1,77 @@
 #include <iostream>
-#include <Windows.h> 
-// ... (Include necessary Fortnite-specific libraries - you'll need to figure these out based on how Fortnite works)
+#include <Windows.h>
+#include <string>
+
+// ... (Fortnite-specific libraries - you'll need to figure these out)
 
 bool aimbotEnabled = false;
 float aimbotSmoothness = 10.0f;
-std::string validKey = "Rev_UD8L22EPS0MKE2084RTPAM72KA8W8LOKV82TY1_M2T9E1O0O08O0M5F2G"; // Replace with your actual key
 
-// Placeholder for complex functions that would need to be implemented
-Vector3 GetEnemyPosition() { 
-    return Vector3(0, 0, 0); 
+std::string licenseKey;
+
+// Function to get user input (license key)
+std::string getLicenseKey() {
+    std::cout << "Enter license key: ";
+    std::string key;
+    std::getline(std::cin, key);
+    return key;
 }
 
-float CalculateAngle(Vector3 yourCrosshairPosition, Vector3 enemyHeadPosition) { 
-    return 0.0f; 
+// Function to check license key validity
+bool isValidLicense(const std::string& key) {
+    // Replace with your actual license key validation logic
+    if (key == "1daykeyrev_838337HEBB1019363602BHEUEVDUIDHD18273636BEUWIAB1082BU772VW" ||
+        key == "1weekkeyrev_2937BBE9118QUB993WJEJ8REV0202BWVW873BMW8282YTOW1" ||
+        key == "1monthkeyrev_82737HWB1818VQO7273QQJHSHNUTELLA82727HEGEG99" ||
+        key == "lifetimekeyrev_u837373JWHW82882JJBWJMBMW828282BQUW103747BBUEY826" ||
+        key == "AdminLicense_Rev_Riko_727373BEIBEBEISHSBSNS8272737738NWIWBSVDISUWBWPAHDNAJ827373729J8G2GHGU67B8HHR4J0B4B8B") {
+        return true;
+    }
+    return false;
 }
 
-void SetCrosshairAngle(float angle) { 
-}
-
-bool IsEnemyInFOV(Vector3 enemyPosition, float fov) { 
-    return true; 
-}
+// Placeholder for complex functions (same as before)
+// ...
 
 void aimbot() {
-    float fov = 90.0f; 
-    Vector3 closestEnemyPosition = GetEnemyPosition();
-    if (IsEnemyInFOV(closestEnemyPosition, fov)) {
-        float angle = CalculateAngle(yourCrosshairPosition, closestEnemyPosition);
-        float smoothing = aimbotSmoothness;
-        float smoothedAngle = Lerp(yourCurrentAngle, angle, smoothing * deltaTime); 
-        if (GetAsyncKeyState(VK_LBUTTON) & 0x8000) { 
-            SetCrosshairAngle(smoothedAngle);
-        } 
-    }
+    // ... (Aimbot logic)
 }
 
 void DrawMenu() {
-    // Draw the "Rev" label at the top
-    // ... (Code to draw text)
-
-    // Code to draw the menu, buttons, and slider
-    // ...
+    // ... (Menu drawing code)
 }
 
 void HandleMenuInput() {
-    // Check for key input
-    if (GetAsyncKeyState(VK_RETURN) & 0x8000) { // Check if Enter key is pressed
-        std::string enteredKey;
-        // Code to get user input (e.g., using a text box)
-        // ...
-
-        if (enteredKey == validKey) {
-            // Key is valid, enable the cheat
-aimbotEnabled = true;
-            std::cout << "Void Cheatz activated!\n";
-        } else {
-            std::cout << "Invalid key.\n";
-        }
-    }
-
-    // ... (Existing code for handling other menu input)
+    // ... (Menu input handling code)
 }
 
 int main() {
     // ... (Fortnite initialization code)
+
+    licenseKey = getLicenseKey();
+
+    if (isValidLicense(licenseKey)) {
+        if (licenseKey == "AdminLicense_Rev_Riko_727373BEIBEBEISHSBSNS8272737738NWIWBSVDISUWBWPAHDNAJ827373729J8G2GHGU67B8HHR4J0B4B8B") {
+            std::cout << "Admin access granted!\n";
+            // Add admin menu options here
+            // 1. Generate 1-day key
+            // 2. Generate 1-week key
+            // 3. Generate 1-month key
+            // 4. Generate lifetime key
+        } else {
+            std::cout << "Cheat menu activated!\n";
+            aimbotEnabled = true;
+        }
+    } else {
+        std::cout << "Invalid license key.\n";
+    }
 
     while (true) {
         DrawMenu();
         HandleMenuInput();
 
         if (aimbotEnabled) {
-            aimbot(); 
+            aimbot();
         }
 
         Sleep(1);
