--- a/l2U27E.md
+++ b/l2U27E.md
@@ -2,10 +2,21 @@
 #include <Windows.h>
 #include <string>
 
-// ... (Fortnite-specific libraries - you'll need to figure these out)
+// Placeholder for Fortnite-specific libraries
+// #include <FortniteLibraries.h>
 
+// Global variables for aimbot settings
 bool aimbotEnabled = false;
-float aimbotSmoothness = 10.0f;
+bool memoryAim = false;
+bool silentAimV1 = false;
+bool silentAimV2 = false;
+bool spinbot = false;
+bool visibleTargetsOnly = false;
+bool aimHead = false;
+bool aimChest = true;  // Default to aiming at the chest
+bool aimPelvis = false;
+float aimbotFOV = 180.0f;
+float aimbotSmoothness = 0.0f;
 
 std::string licenseKey;
 
@@ -34,19 +45,77 @@ bool isValidLicense(const std::string& key) {
 // ...
 
 void aimbot() {
-    // ... (Aimbot logic)
+    // Aimbot logic goes here
 }
 
 void DrawMenu() {
-    // ... (Menu drawing code)
+    system("cls");
+    std::cout << "Aimbot Menu\n";
+    std::cout << "============\n";
+    std::cout << (aimbotEnabled ? "[X] " : "[ ] ") << "Enable Aimbot (ENTER)\n";
+    std::cout << (memoryAim ? "[X] " : "[ ] ") << "Memory Aim\n";
+    std::cout << (silentAimV1 ? "[X] " : "[ ] ") << "Silent (V1) (might be unsafe)\n";
+    std::cout << (silentAimV2 ? "[X] " : "[ ] ") << "Silent (V2, sticky) (might be unsafe)\n";
+    std::cout << (spinbot ? "[X] " : "[ ] ") << "Spinbot\n";
+    std::cout << (visibleTargetsOnly ? "[X] " : "[ ] ") << "Visible Targets Only (F4)\n";
+    std::cout << "\nAim Bone\n";
+    std::cout << (aimHead ? "[X] " : "[ ] ") << "Head\n";
+    std::cout << (aimChest ? "[X] " : "[ ] ") << "Chest\n";
+    std::cout << (aimPelvis ? "[X] " : "[ ] ") << "Pelvis\n";
+    std::cout << "\nFOV: " << aimbotFOV << " (use arrow keys to adjust)\n";
+    std::cout << "Smooth: " << aimbotSmoothness << " (use +/- to adjust)\n";
 }
 
 void HandleMenuInput() {
-    // ... (Menu input handling code)
+    if (GetAsyncKeyState(VK_RETURN) & 1) {
+        aimbotEnabled = !aimbotEnabled;
+    }
+    if (GetAsyncKeyState('1') & 1) {
+        memoryAim = !memoryAim;
+    }
+    if (GetAsyncKeyState('2') & 1) {
+        silentAimV1 = !silentAimV1;
+    }
+    if (GetAsyncKeyState('3') & 1) {
+        silentAimV2 = !silentAimV2;
+    }
+    if (GetAsyncKeyState('4') & 1) {
+        spinbot = !spinbot;
+    }
+    if (GetAsyncKeyState(VK_F4) & 1) {
+        visibleTargetsOnly = !visibleTargetsOnly;
+    }
+    if (GetAsyncKeyState('H') & 1) {
+        aimHead = true;
+        aimChest = false;
+        aimPelvis = false;
+    }
+    if (GetAsyncKeyState('C') & 1) {
+        aimHead = false;
+        aimChest = true;
+        aimPelvis = false;
+    }
+    if (GetAsyncKeyState('P') & 1) {
+        aimHead = false;
+        aimChest = false;
+        aimPelvis = true;
+    }
+    if (GetAsyncKeyState(VK_UP) & 1) {
+        aimbotFOV += 1.0f;
+    }
+    if (GetAsyncKeyState(VK_DOWN) & 1) {
+        aimbotFOV -= 1.0f;
+    }
+    if (GetAsyncKeyState(VK_ADD) & 1) {
+        aimbotSmoothness += 1.0f;
+    }
+    if (GetAsyncKeyState(VK_SUBTRACT) & 1) {
+        aimbotSmoothness -= 1.0f;
+    }
 }
 
 int main() {
-    // ... (Fortnite initialization code)
+    // Placeholder for Fortnite initialization code
 
     licenseKey = getLicenseKey();
 
