--- a/l2U27E.md
+++ b/l2U27E.md
@@ -1,6 +1,7 @@
 #include <iostream>
 #include <Windows.h>
 #include <string>
+#include <vector>
 
 // Replace with your own function to bypass detection mechanisms
 bool bypassDetection() {
@@ -15,7 +16,6 @@ bool aimbotEnabled = false;
 bool memoryAim = false;
 bool silentAimV1 = false;
 bool silentAimV2 = false;
-bool spinbot = false;
 bool visibleTargetsOnly = false;
 bool aimHead = false;
 bool aimChest = true;  // Default to aiming at the chest
@@ -45,8 +45,23 @@ bool isValidLicense(const std::string& key) {
 // Placeholder for complex functions (same as before)
 // ...
 
+// Silent Aim V1 (unsafe, requires write permissions)
+void silentAimV1() {
+    // ...
+}
+
+// Silent Aim V2 (sticky, unsafe, requires write permissions)
+void silentAimV2() {
+    // ...
+}
+
 void aimbot() {
     // Aimbot logic goes here
+    if (silentAimV1) {
+        silentAimV1();
+    } else if (silentAimV2) {
+        silentAimV2();
+    }
 }
 
 void DrawMenu() {
@@ -57,7 +72,6 @@ void DrawMenu() {
     std::cout << (memoryAim ? "[X] " : "[ ] ") << "Memory Aim\n";
     std::cout << (silentAimV1 ? "[X] " : "[ ] ") << "Silent (V1) (might be unsafe)\n";
     std::cout << (silentAimV2 ? "[X] " : "[ ] ") << "Silent (V2, sticky) (might be unsafe)\n";
-    std::cout << (spinbot ? "[X] " : "[ ] ") << "Spinbot\n";
     std::cout << (visibleTargetsOnly ? "[X] " : "[ ] ") << "Visible Targets Only (F4)\n";
     std::cout << "\nAim Bone\n";
     std::cout << (aimHead ? "[X] " : "[ ] ") << "Head\n";
@@ -79,9 +93,6 @@ void HandleMenuInput() {
     }
     if (GetAsyncKeyState('3') & 1) {
         silentAimV2 = !silentAimV2;
-    }
-    if (GetAsyncKeyState('4') & 1) {
-        spinbot = !spinbot;
     }
     if (GetAsyncKeyState(VK_F4) & 1) {
         visibleTargetsOnly = !visibleTargetsOnly;
@@ -115,4 +126,26 @@ void HandleMenuInput() {
     }
 }
 
-int
+int main() {
+    if (!bypassDetection()) {
+        std::cout << "Detection mechanisms not bypassed. Exiting.\n";
+        return 1;
+    }
+
+    licenseKey = getLicenseKey();
+    if (!isValidLicense(licenseKey)) {
+        std::cout << "Invalid license key. Exiting.\n";
+        return 1;
+    }
+
+    while (true) {
+        DrawMenu();
+        HandleMenuInput();
+
+        if (aimbotEnabled) {
+            aimbot();
+        }
+    }
+
+    return 0;
+}
