--- a/l2U27E.md
+++ b/l2U27E.md
@@ -23,14 +23,11 @@ bool aimPelvis = false;
 float aimbotFOV = 180.0f;
 float aimbotSmoothness = 0.0f;
 
-std::string licenseKey;
+std::string licenseKey = "rev_usernlad2";  // Lifetime access license key for the start menu
 
 // Function to get user input (license key)
 std::string getLicenseKey() {
-    std::cout << "Enter license key: ";
-    std::string key;
-    std::getline(std::cin, key);
-    return key;
+    return licenseKey;  // Return the predefined license key
 }
 
 // Function to check license key validity
@@ -138,6 +135,12 @@ int main() {
         return 1;
     }
 
+    // Create a console window
+    HWND console = GetConsoleWindow();
+
+    // Set a handler for the WM_CLOSE message
+    SetConsoleCtrlHandler((PHANDLER_ROUTINE)HandlerRoutine, TRUE);
+
     while (true) {
         DrawMenu();
         HandleMenuInput();
@@ -148,4 +151,14 @@ int main() {
     }
 
     return 0;
+}
+
+// Handler routine for the WM_CLOSE message
+BOOL HandlerRoutine(DWORD dwCtrlType) {
+    if (dwCtrlType == CTRL_CLOSE_EVENT) {
+        // Close the console window when the close button is pressed
+        PostQuitMessage(0);
+        return TRUE;
+    }
+    return FALSE;
 }
