--- a/l2U27E.md
+++ b/l2U27E.md
@@ -1,123 +1,127 @@
 #include <iostream>
-#include <Windows.h>
-#include <string>
 #include <vector>
+#include <cmath>
+#include <algorithm>
 
-// Replace with your own function to bypass detection mechanisms
-bool bypassDetection() {
-    // ...
+using namespace std;
+
+// Define the game entities
+struct Player {
+  float x, y, z; // Position
+  float yaw, pitch; // Rotation
+};
+
+struct Bullet {
+  float x, y, z; // Position
+  float vx, vy, vz; // Velocity
+};
+
+// Global variables
+vector<Player> players;
+vector<Bullet> bullets;
+bool isAiming = false;
+
+// Function to calculate the distance between two points
+float distance(float x1, float y1, float z1, float x2, float y2, float z2) {
+  return sqrt(pow(x2 - x1, 2) + pow(y2 - y1, 2) + pow(z2 - z1, 2));
 }
 
-// Placeholder for Fortnite-specific libraries
-// #include <FortniteLibraries.h>
+// Function to get the closest player to the crosshair
+Player* getClosestPlayer(float crosshairX, float crosshairY) {
+  Player* closestPlayer = nullptr;
+  float closestDistance = FLT_MAX;
 
-// Global variables for aimbot settings
-bool aimbotEnabled = false;
-bool memoryAim = false;
-bool visibleTargetsOnly = false;
-bool aimHead = false;
-bool aimChest = true;  // Default to aiming at the chest
-bool aimPelvis = false;
-float aimbotFOV = 180.0f;
-float aimbotSmoothness = 0.0f;
+  for (Player& player : players) {
+    // Calculate the distance between the crosshair and the player's head
+    float dx = crosshairX - player.x;
+    float dy = crosshairY - player.y;
+    float dz = 0.0f - player.z; // Assume the player's head is at y = 0
+    float distanceToPlayer = distance(0.0f, 0.0f, 0.0f, dx, dy, dz);
 
-std::string licenseKey = "rev_usernlad2";  // Lifetime access license key for the start menu
+    // Update the closest player if the distance is smaller
+    if (distanceToPlayer < closestDistance) {
+      closestDistance = distanceToPlayer;
+      closestPlayer = &player;
+    }
+  }
 
-// Function to get user input (license key)
-std::string getLicenseKey() {
-    return licenseKey;  // Return the predefined license key
+  return closestPlayer;
 }
 
-// Function to check license key validity
-bool isValidLicense(const std::string& key) {
-    // Replace with your actual license key validation logic
-    if (key == "your_license_key_here") {
-        return true;
+// Function to update the game loop
+void update() {
+  // Check if the player is aiming
+  if (isAiming) {
+    // Get the position of the crosshair
+    float crosshairX, crosshairY;
+    getCrosshairPosition(&crosshairX, &crosshairY);
+
+    // Get the closest player to the crosshair
+    Player* closestPlayer = getClosestPlayer(crosshairX, crosshairY);
+
+    // Aim at the closest player's head
+    if (closestPlayer != nullptr) {
+      // Calculate the direction to the player's head
+      float dx = closestPlayer->x - player.x;
+      float dy = closestPlayer->y - player.y;
+      float dz = closestPlayer->z - player.z;
+      float length = sqrt(dx * dx + dy * dy + dz * dz);
+      dx /= length;
+      dy /= length;
+      dz /= length;
+
+      // Update the player's rotation
+      player.yaw = atan2(dx, dz) * 180.0f / M_PI;
+      player.pitch = asin(dy) * 180.0f / M_PI;
     }
-    return false;
+  }
 }
 
-// Placeholder for complex functions (same as before)
-// ...
+// Function to handle the player's input
+void handleInput() {
+  // Check if the player pressed the E key to start aiming
+  if (keyPressed('E')) {
+    isAiming = true;
+  }
 
-void aimbot() {
-    // Aimbot logic goes here
+  // Check if the player released the E key to stop aiming
+  if (keyReleased('E')) {
+    isAiming = false;
+  }
+
+  // Check if the player fired a bullet
+  if (keyPressed('LMB')) {
+    // Create a new bullet
+    Bullet bullet;
+    bullet.x = player.x;
+    bullet.y = player.y;
+    bullet.z = player.z;
+    bullet.vx = cos(player.yaw * M_PI / 180.0f) * 10.0f;
+    bullet.vy = sin(player.yaw * M_PI / 180.0f) * 10.0f;
+    bullet.vz = sin(player.pitch * M_PI / 180.0f) * 10.0f;
+
+    // Add the bullet to the list of bullets
+    bullets.push_back(bullet);
+  }
 }
 
-void DrawMenu() {
-    system("cls");
-    std::cout << "Aimbot Menu\n";
-    std::cout << "============\n";
-    std::cout << (aimbotEnabled ? "[X] " : "[ ] ") << "Enable Aimbot (ENTER)\n";
-    std::cout << (memoryAim ? "[X] " : "[ ] ") << "Memory Aim\n";
-    std::cout << (visibleTargetsOnly ? "[X] " : "[ ] ") << "Visible Targets Only (F4)\n";
-    std::cout << "\nAim Bone\n";
-    std::cout << (aimHead ? "[X] " : "[ ] ") << "Head\n";
-    std::cout << (aimChest ? "[X] " : "[ ] ") << "Chest\n";
-    std::cout << (aimPelvis ? "[X] " : "[ ] ") << "Pelvis\n";
-    std::cout << "\nFOV: " << aimbotFOV << " (use arrow keys to adjust)\n";
-    std::cout << "Smooth: " << aimbotSmoothness << " (use +/- to adjust)\n";
-}
-
-void HandleMenuInput() {
-    if (GetAsyncKeyState(VK_RETURN) & 1) {
-        aimbotEnabled = !aimbotEnabled;
-    }
-    if (GetAsyncKeyState('1') & 1) {
-        memoryAim = !memoryAim;
-    }
-    if (GetAsyncKeyState(VK_F4) & 1) {
-        visibleTargetsOnly = !visibleTargetsOnly;
-    }
-    if (GetAsyncKeyState('H') & 1) {
-        aimHead = true;
-        aimChest = false;
-        aimPelvis = false;
-    }
-    if (GetAsyncKeyState('C') & 1) {
-        aimHead = false;
-        aimChest = true;
-        aimPelvis = false;
-    }
-    if (GetAsyncKeyState('P') & 1) {
-        aimHead = false;
-        aimChest = false;
-        aimPelvis = true;
-    }
-    if (GetAsyncKeyState(VK_UP) & 1) {
-        aimbotFOV += 1.0f;
-    }
-    if (GetAsyncKeyState(VK_DOWN) & 1) {
-        aimbotFOV -= 1.0f;
-    }
-    if (GetAsyncKeyState(VK_ADD) & 1) {
-        aimbotSmoothness += 1.0f;
-    }
-    if (GetAsyncKeyState(VK_SUBTRACT) & 1) {
-        aimbotSmoothness -= 1.0f;
-    }
-}
-
+// Main game loop
 int main() {
-    if (!bypassDetection()) {
-        std::cout << "Detection mechanisms not bypassed. Exiting.\n";
-        return 1;
-    }
+  // Initialize the game entities
+  players.push_back({0.0f, 0.0f, 0.0f, 0.0f, 0.0f}); // Player 1
+  players.push_back({10.0f, 0.0f, 0.0f, 0.0f, 0.0f}); // Player 2
 
-    licenseKey = getLicenseKey();
-    if (!isValidLicense(licenseKey)) {
-        std::cout << "Invalid license key. Exiting.\n";
-        return 1;
-    }
+  // Main game loop
+  while (true) {
+    // Handle the player's input
+    handleInput();
 
-    while (true) {
-        DrawMenu();
-        HandleMenuInput();
+    // Update the game state
+    update();
 
-        if (aimbotEnabled) {
-            aimbot();
-        }
-    }
+    // Render the game world
+    renderWorld();
+  }
 
-    return 0;
+  return 0;
 }
